2011-02-24  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_save.m

	- Undo last change. The flag -v7.3 is not necessary, and prevents
	Seg3D from loading the segmentations. I don't know what the
	problem was when trying to save the NRRD volumes, but it's no
	longer an issue.

2011-02-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

 	* FileFormatToolbox/scinrrd_save.m

	- Force saving with flag -v7.3 to avoid warning message.

2011-02-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/pts_tps_map.m v6.4

	- Remove whitespace before or after bracket.

	- Fix bug. A bad testing condition prevented the computation of
	interpolated points apart from the first one in the SLOW mode.

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Add input argument to switch between fast (and more memory
	consuming) and slow thin-plate spline interpolation.

	- Fix bug, force scaling factor to be a 3-vector so that it can be
	different in each coordinate.

	- Clear memory as it's no longer needed, so that we can process
	bigger images.

	- Add sigma as output argument so that we now how many voxels we
	are using to low-pass filter the image.

2011-02-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* README

	- Add entry for img_tps_map

2011-02-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* README

	- Add some function names and descriptions that I had forgotten.

	* Add FiltersToolbox/img_tps_map.m

	- IMG_TPS_MAP Warp an image using a thin-plate spline
	transformation

2011-02-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Now the standard deviation necessary to prevent aliasing is
	computed based on proper formulas, instead of guessing. Notes
	about the computations have been added to the help header.

	- Add input argument sigma to force bandwidth of Gaussian filter.

	- Fix bug, the number of rows and columns were swapped, so that